# socketlabs-rs

./: Cargo.toml  README.md
examples/: send_email.rs
src/: error.rs  lib.rs  message.rs  request.rs  response.rs
