[package]
authors = ["Beatriz Rizental <beatriz.rizental@gmail.com>"]
name = "socketlabs"
version = "0.1.3"
description = "Unofficial Rust library for the SocketLabs Injection API."
repository = "https://github.com/brizental/socketlabs-rs"
documentation= "https://docs.rs/socketlabs/0.1.0/socketlabs/"
license = "MPL-2.0"

[dependencies]
failure = "0.1.1"
failure_derive = "0.1.1"
reqwest = "0.8.6"
serde = "1.0.70"
serde_derive = "1.0.70"
serde_json = "1.0.24"
