[package]
authors = ["Beatriz Rizental <beatriz.rizental@gmail.com>"]
name = "socketlabs"
version = "0.2.2-alpha.0"
description = "Unofficial Rust library for the SocketLabs Injection API."
repository = "https://github.com/brizental/socketlabs-rs"
documentation= "https://docs.rs/socketlabs/0.1.0/socketlabs/"
license = "MPL-2.0"

[dependencies]
failure = "0.1.5"
failure_derive = "0.1.5"
reqwest = "0.9.18"
serde = "1.0.93"
serde_derive = "1.0.93"
serde_json = "1.0.39"
